2003-12-06  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-parser.c (parser_step_headers): If scanning for eoln
	results in finding inend, request a refill and try again (changed
	from inptr + 1 >= inend).

2003-12-05  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/internet-address.c (decode_domain): Make sure domain->len
	> 0 before checking domain->str[domain->len - 1].

	* gmime/gmime-gpg-context.c (gpg_ctx_op_start): Properly set the
	O_NONBLOCK flag on each of the pipes (ie. we need to get the
	current flags first and then add the O_NONBLOCK flag rather than
	just setting the O_NONBLOCK flag by itself).

2003-12-04  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Updated.

	* configure.in: Bumped version to 2.1.1

2003-12-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_op_start): Modified the code
	that closes the child's fds to use fcntl and also to start at fd =
	3 so as to get rid of the need to check for stdin/out/err.

	* gmime/gmime-filter-from.c (filter_filter): Fixed to malloc the
	correct buffer length.

2003-10-28  Pawel Salek  <pawsa@theochem.kth.se>

	* gmime.h.in: Use macros rather than the global variables to
	prevent compiler warnings.

	* gmime-error.h: Removed the trailing comma after the last enum
	value to fix ANSI compile warnings.

	* gmime-filter-basic.h: Same.

	* gmime-filter-best.h: Here too.

	* gmime-filter-crlf.h: And here.

	* gmime-filter-from.h: Same.

	* gmime-filter-yenc.h: Again here.

	* gmime-multipart-encrypted.h: And here.

	* gmime-multipart-signed.h: Here too.

	* gmime-stream-buffer.h: Same.

	* gmime-stream.h: And finally here.

2003-10-08  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Added a check for altzone.

	* gmime/gmime-utils.c (parse_broken_date, parse_rfc822_date):
	Account for altzone if the system libc defines it.

2003-09-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-host-utils.c (g_gethostbyaddr_r): IPv6